[package]
name = "era-jp"
version = "0.1.3"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Japanese Era Library"
repository = "https://github.com/aoyagikouhei/era-jp-rs"
keywords = ["time"]
categories = ["encoding"]
readme = "Readme.md"
documentation = "https://docs.rs/era-jp"
edition = "2018"

[dependencies]
chrono = "~0.4.0"